--- a/index.html
+++ b/index.html
@@ -98,7 +98,10 @@
           <li class="advantages-item">
             <div class="advantages-wrapper">
               <div class="advantages-text-block">
-                <h3 class="advantages-subtitle">Там есть мост дьявола</h3>
+                <h3 class="advantages-subtitle">
+                  Там есть<br />
+                  мост дьявола
+                </h3>
                 <p class="advantages-text">
                   Да, по нему можно пройти! Если вы осмелитесь, разумеется
                 </p>
@@ -127,7 +130,8 @@
             <h3 class="services-type">Жильё</h3>
             <p class="services-description">
               Рекомендуем пожить<br />
-              в настоящем мотеле, всё как в кино!
+              в настоящем мотеле,<br />
+              всё как в кино!
             </p>
           </li>
           <li class="services-item">
@@ -173,7 +177,7 @@
             class="subscribe-email"
             placeholder="Ваш e-mail"
           />
-          <button class="button subscribe-button" type="button">
+          <button class="button subscribe-button" type="submit">
             Подписаться
           </button>
         </form>
@@ -201,7 +205,7 @@
           <li class="social-item">
             <a
               href="https://www.youtube.com/user/htmlacademyru"
-              class="social-link social-link-html-academy"
+              class="social-link social-link-youtube"
               ><span class="visually-hidden">HTML Академия</span></a
             >
           </li>
