Делает гридами блок с преимуществами и блок с карточками отеля (Раздел 7)

--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,10 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
+    <!-- ШАПКА САЙТА -->
     <header class="page-header">
+
+      <!-- ЛОГОТИП -->
       <a href="index.html" class="logo"
         ><img
           src="images/svg-icons/logo.svg"
@@ -16,6 +19,8 @@
           width="140"
           height="70"
       /></a>
+
+      <!-- НАВИГАЦИЯ -->
       <nav class="navigation">
         <ul class="navigation-list">
           <li class="navigation-item">
@@ -29,6 +34,8 @@
           </li>
         </ul>
       </nav>
+
+      <!-- ПОЛЬЗОВАТЕЛЬСКОЕ МЕНЮ -->
       <div class="user-menu">
         <a class="search" href="#">
           <span class="visually-hidden">Перейти в поиск</span>
@@ -40,7 +47,10 @@
       </div>
     </header>
 
+    <!-- ОСНОВНОЕ СОДЕРЖИМОЕ -->
     <main class="main-inner">
+
+      <!-- БЛОК С ЗАГОЛОВКОМ И ХЛЕБНЫМИ КРОШКАМИ -->
       <div class="wrapper">
         <header class="inner-header">
           <h1 class="inner-header-title">Гостиницы Седоны</h1>
@@ -57,6 +67,8 @@
             </li>
           </ol>
         </header>
+
+        <!-- ФИЛЬТР ОТЕЛЕЙ -->
         <section class="hotels-filter">
           <h2 class="visually-hidden">Фильтры для выбора отеля</h2>
           <form
@@ -161,6 +173,7 @@
         </section>
       </div>
 
+      <!-- КАТАЛОГ ОТЕЛЕЙ -->
       <section class="hotels-catalog">
         <h2 class="visually-hidden">Каталог отелей</h2>
 
@@ -349,6 +362,8 @@
           </li>
         </ol>
       </section>
+
+      <!-- БЛОК С ПОДПИСКОЙ -->
       <section class="subscribe subscribe-inner">
         <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
         <p class="subscribe-subtitle">
@@ -371,7 +386,10 @@
       </section>
     </main>
 
+    <!-- ПОДВАЛ САЙТА -->
     <footer class="page-footer">
+
+      <!-- КОНТАКТЫ -->
       <section class="contacts">
         <h2 class="visually-hidden">Контактная информация</h2>
         <ul class="social-list">
