--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
+
+    <!-- ШАПКА САЙТА -->
     <header class="page-header">
+
+      <!-- ЛОГОТИП -->
       <a class="logo"
         ><img
           src="images/svg-icons/logo.svg"
@@ -16,6 +20,8 @@
           width="140"
           height="70"
       /></a>
+
+      <!-- НАВИГАЦИЯ -->
       <nav class="navigation">
         <ul class="navigation-list">
           <li class="navigation-item">
@@ -29,6 +35,8 @@
           </li>
         </ul>
       </nav>
+
+      <!-- ПОЛЬЗОВАТЕЛЬСКОЕ МЕНЮ -->
       <div class="user-menu">
         <a class="search" href="#">
           <span class="visually-hidden">Перейти в поиск</span>
@@ -40,7 +48,10 @@
       </div>
     </header>
 
+    <!-- ОСНОВНОЕ СОДЕРЖИМОЕ -->
     <main class="main-index">
+
+      <!-- ПРОМО-БЛОК -->
       <section class="hero">
         <h1 class="visually-hidden">город Седона</h1>
         <img
@@ -51,6 +62,8 @@
           height="352"
         />
       </section>
+
+      <!-- ПРЕИМУЩЕСТВА -->
       <section class="advantages">
         <h2 class="visually-hidden">Преимущества города</h2>
         <p class="advantages-title">
@@ -60,7 +73,7 @@
           Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!
         </p>
         <ul class="advantages-list">
-          <li class="advantages-item">
+          <li class="advantages-item advantages-item-wide">
             <div class="advantages-wrapper">
               <div class="advantages-text-block">
                 <h3 class="advantages-subtitle">Настоящий городок</h3>
@@ -95,7 +108,7 @@
               Большинство едет в Гранд Каньон и толпится там
             </p>
           </li>
-          <li class="advantages-item">
+          <li class="advantages-item advantages-item-wide">
             <div class="advantages-wrapper">
               <div class="advantages-text-block">
                 <h3 class="advantages-subtitle">
@@ -117,6 +130,8 @@
           </li>
         </ul>
       </section>
+
+      <!-- УСЛУГИ -->
       <section class="services">
         <h2 class="visually-hidden">Услуги</h2>
         <p class="services-title">
@@ -150,6 +165,8 @@
           </li>
         </ul>
       </section>
+
+      <!-- ПОИСК ОТЕЛЯ -->
       <section class="hotel-search">
         <h2 class="visually-hidden">Поиск гостинницы</h2>
         <p class="hotel-search-title">Заинтересовались?</p>
@@ -161,6 +178,8 @@
           Поиск гостиницы в седоне
         </a>
       </section>
+
+      <!-- БЛОК С ПОДПИСКОЙ -->
       <section class="subscribe">
         <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
         <p class="subscribe-subtitle">
@@ -184,7 +203,10 @@
       </section>
     </main>
 
+    <!-- ПОДВАЛ САЙТА -->
     <footer class="page-footer">
+
+      <!-- КОНТАКТЫ -->
       <section class="contacts">
         <h2 class="visually-hidden">Контактная информация</h2>
         <ul class="social-list">
